// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SelectField should handle key down event Enter/Tab (existing value) 1`] = `
Object {
  "filteredOptions": Array [
    Object {
      "label": "First",
      "text": "first",
      "value": 1,
    },
    Object {
      "label": "Second",
      "text": "second",
      "value": 2,
    },
  ],
  "input": "",
  "optionsOpen": false,
  "selectedOptionIndex": 0,
}
`;

exports[`SelectField should handle key down event Enter/Tab (existing value) 2`] = `
Object {
  "filteredOptions": Array [
    Object {
      "label": "First",
      "text": "first",
      "value": 1,
    },
    Object {
      "label": "Second",
      "text": "second",
      "value": 2,
    },
  ],
  "input": "",
  "optionsOpen": false,
  "selectedOptionIndex": 0,
}
`;

exports[`SelectField should handle key down event Enter/tab (custom value) 1`] = `
Object {
  "filteredOptions": Array [],
  "input": "custom value",
  "optionsOpen": true,
  "selectedOptionIndex": -1,
}
`;

exports[`SelectField should handle key down event Enter/tab (custom value) 2`] = `
Object {
  "filteredOptions": Array [],
  "input": "custom value",
  "optionsOpen": true,
  "selectedOptionIndex": -1,
}
`;

exports[`SelectField should handle key down event Escape 1`] = `
Object {
  "filteredOptions": Array [
    Object {
      "label": "Second",
      "text": "second",
      "value": 2,
    },
  ],
  "input": "",
  "optionsOpen": false,
  "selectedOptionIndex": 0,
}
`;

exports[`SelectField should init state with custom props 1`] = `
Object {
  "filteredOptions": Array [
    Object {
      "label": "Second",
      "text": "second",
      "value": 2,
    },
  ],
  "input": "",
  "optionsOpen": false,
  "selectedOptionIndex": 0,
}
`;

exports[`SelectField should init state with default props 1`] = `
Object {
  "filteredOptions": Array [],
  "input": "",
  "optionsOpen": false,
  "selectedOptionIndex": 0,
}
`;

exports[`SelectField should render a select input with custom props 1`] = `
<div
  style={
    Object {
      "background": "red",
    }
  }
>
  <div>
    <div
      className="undefined dropdown-toggle"
      onClick={[Function]}
    >
      <span
        className=""
        style={
          Object {
            "minWidth": 10,
            "opacity": 1,
          }
        }
      >
        First
      </span>
      <input
        onChange={[Function]}
        onKeyDown={[Function]}
        style={
          Object {
            "minWidth": 10,
          }
        }
        type="text"
        value=""
      />
    </div>
  </div>
  <UncontrolledDropdown
    isOpen={false}
    toggle={[Function]}
  >
    <Xo
      tag="div"
    >
      <ei
        className="undefined"
        onClick={[Function]}
        onMouseEnter={[Function]}
        tag="button"
        toggle={true}
        type="button"
      >
        Second
      </ei>
    </Xo>
  </UncontrolledDropdown>
</div>
`;

exports[`SelectField should render a select input with default props 1`] = `
<div
  style={Object {}}
>
  <div>
    <div
      className="undefined dropdown-toggle"
      onClick={[Function]}
    >
      <span
        className="undefined"
        style={
          Object {
            "minWidth": 10,
            "opacity": 1,
          }
        }
      >
        Select an option
      </span>
      <input
        onChange={[Function]}
        onKeyDown={[Function]}
        style={
          Object {
            "minWidth": 10,
          }
        }
        type="text"
        value=""
      />
    </div>
  </div>
  <UncontrolledDropdown
    isOpen={false}
    toggle={[Function]}
  >
    <Xo
      tag="div"
    >
      <ei
        header={true}
        tag="button"
        toggle={true}
      >
        No result
      </ei>
    </Xo>
  </UncontrolledDropdown>
</div>
`;

exports[`SelectField should reset state on blur 1`] = `
Object {
  "filteredOptions": Array [
    Object {
      "label": "Second",
      "text": "second",
      "value": 2,
    },
  ],
  "input": "",
  "optionsOpen": false,
  "selectedOptionIndex": 0,
}
`;

exports[`SelectField should update state when search changes (custom NOT values allowed) 1`] = `
Object {
  "filteredOptions": Array [
    Object {
      "label": "Hello",
      "value": "hello",
    },
  ],
  "input": "hello",
  "optionsOpen": false,
  "selectedOptionIndex": 0,
}
`;

exports[`SelectField should update state when search changes (custom NOT values allowed) 2`] = `
Object {
  "filteredOptions": Array [
    Object {
      "label": "Hello",
      "value": "hello",
    },
    Object {
      "label": "World",
      "value": "world",
    },
  ],
  "input": "",
  "optionsOpen": false,
  "selectedOptionIndex": 0,
}
`;

exports[`SelectField should update state when search changes (custom values allowed) 1`] = `
Object {
  "filteredOptions": Array [
    Object {
      "label": "Hello",
      "value": "hello",
    },
  ],
  "input": "hello",
  "optionsOpen": false,
  "selectedOptionIndex": -1,
}
`;

exports[`SelectField should update state when search changes (custom values allowed) 2`] = `
Object {
  "filteredOptions": Array [
    Object {
      "label": "Hello",
      "value": "hello",
    },
    Object {
      "label": "World",
      "value": "world",
    },
  ],
  "input": "",
  "optionsOpen": false,
  "selectedOptionIndex": -1,
}
`;

exports[`SelectField should use custom props 1`] = `
Object {
  "allowCustomValue": false,
  "onChange": [Function],
  "options": Array [
    Object {
      "label": "First",
      "text": "first",
      "value": 1,
    },
    Object {
      "label": "Second",
      "text": "second",
      "value": 2,
    },
  ],
  "placeholder": "placeholder",
  "singular": "option",
  "style": Object {
    "background": "red",
  },
  "value": 1,
}
`;

exports[`SelectField should use default props 1`] = `
Object {
  "allowCustomValue": false,
  "onChange": [Function],
  "options": Array [],
  "placeholder": "Select an option",
  "singular": "option",
  "style": Object {},
}
`;
